--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "burger",
+  "name": "nolimits-fitness-app",
   "version": "1.0.0",
-  "description": "Eat the Burger! A MySQL, Node, Express, Handlebars restaurant app that lets users input the names of burgers they'd like to eat.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "no-limits-fitness-app",
+  "main": "server.js",
+  "dependencies": {
+    "handlebars": "^4.0.10"
   },
-  "engines": {
-    "node": "4.1.1"
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tomtom28/burger.git"
+    "url": "git+https://github.com/nida7163/nolimits-fitness-app.git"
   },
-  "author": "tomtom28",
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tomtom28/burger/issues"
+    "url": "https://github.com/nida7163/nolimits-fitness-app/issues"
   },
-  "homepage": "https://github.com/tomtom28/burger#readme",
-  "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "express-handlebars": "^3.0.0",
-    "handlebars": "^4.0.10",
-    "method-override": "^2.3.6",
-    "mysql": "^2.12.0"
-  }
+  "homepage": "https://github.com/nida7163/nolimits-fitness-app#readme"
 }
